--- a/MileStone0 Page/views/homepage.jade
+++ b/MileStone0 Page/views/homepage.jade
@@ -22,7 +22,7 @@ html
    
 
       $("#FeatureHouseSection").css("background-image", "url('http://designexplora.com/wp-content/uploads/2016/07/Design-Wallpaper-And-Photo-High-Resolution-Download-Interior-Design-In-Interior-Design-Pictures.jpg')");
-      $("#FeautureDesciption").text("Team 13\n\n\nMembers\nJeremy Rodgers\nKachi Lau\n Sabiha Barlaskar\nRisha Shah\nParker Gray");
+      $("#FeautureDesciption").text("Just a demo!");
       
       //New Houses
       $("#NewHouse1").css("background-image", "url('https://static.pexels.com/photos/259597/pexels-photo-259597.jpeg')");
@@ -86,6 +86,7 @@ html
       height: 100px;
       right: 60%;
       top: 200px;
+      text-align: center;
       }
       #FeatureDescriptionBoxOpacity {
       position: absolute;
@@ -220,11 +221,12 @@ html
     // Header
     #header  
     // FeatureSection
+
     #FeatureHouseSection.container-fluid
       // Contact Now Box
       
       // Description Box
-
+      
       #FeatureDescriptionBox
         // Set the box opacity
         #FeatureDescriptionBoxOpacity
@@ -234,7 +236,7 @@ html
           h3#FeaturePrice  
           a#CheckItOutButton(href='#')
             
-              
+    
     #BlankSection1.container-fluid
     // RatingHouseSections
     #TitleText
@@ -268,6 +270,7 @@ html
       br
       // Top 6 Newest House
       #NewHouses.row
+        
         #NewHouse1.NewHousesBox.col-sm-6.col-md-4
           .MiddleBox
             a#NewHouse1link(href='#')
@@ -292,5 +295,6 @@ html
           .MiddleBox
             a#NewHouse6link(href='#')
               .text Check It Out
+    
     // Footer
     #footer  
