--- a/MileStone0 Page/views/login.jade
+++ b/MileStone0 Page/views/login.jade
@@ -27,7 +27,7 @@ html
     | &#x9;
     style.
       #background {
-      
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -38,6 +38,7 @@ html
       background-size: cover;
       opacity: 0.2;
       filter:alpha(opacity=40);
+      z-index: -1;
       }
     | &#x9;
     | &#x9;
