--- a/MileStone0 Page/views/search_results.jade
+++ b/MileStone0 Page/views/search_results.jade
@@ -33,7 +33,9 @@ html
     style.
       .pricetag {
       text-align: center;
-      color: white;
+      color: #00000;
+      font-size: 150%;
+      font-weight: bold;
       }
       #featureBox {
       position: relative;
@@ -84,10 +86,10 @@ html
       left: 80%;
       right: 0;
       background-color: #008CBA;
-      overflow: hidden;
+     
       width: 20%;
       height:0;
-      opacity: 0.6;
+      opacity: 0.9;
       transition: .5s ease;
       }
       body {
@@ -98,7 +100,7 @@ html
       width: 100%
       }
       #background {
-      position: relative;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -109,6 +111,7 @@ html
       background-size: cover;
       opacity: 0.2;
       filter:alpha(opacity=40);
+      z-index: -1;
       }
       #lineimage {
       position: relative;
@@ -155,6 +158,7 @@ html
           #searchResult
             - each item in rows 
                #featureBox
+                 
                     a(href="/home_search_results?id=#{item.id}") 
                      p.pricetag.overlay $#{item.price} 
                      img(src="/images/#{item.image}", style="height:250px;width:500px;")
