some more tasks have been completed in accordance to m3 review feedback

--- a/views/login.jade
+++ b/views/login.jade
@@ -72,6 +72,7 @@ html
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .form-group(style='margin-top:10px;top: 1800px;')
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+	      .text-right
               .col-sm-12.controls
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               button#btn-login.btn.btn-success(type='submit') Login 
