--- a/views/header.jade
+++ b/views/header.jade
@@ -24,7 +24,7 @@ html
       color: #FFFFFF;
       position: fixed;
       z-index: 1;
-      width: 1200px;
+      width: 100%;
       }
       .row1{
       padding-top: 10px;
@@ -224,10 +224,11 @@ html
                 span.smallnav.menu(onclick='openNav()') ☰ RECycle
               h1(style='margin:0px;')
                 span.largenav RECycle
+              h4  CSC648 Student Project
             .col-sm-7.col-md-7
              form.navbar-form(role='form', method='post',action='search_results', onsubmit="return validateForm()")
               select.selectpicker.form-control( name="selectpicker",id ="zip",data-style='btn-danger')
-                  option(value='none') Select
+                  option(value='none') Search by
                  
                   option(value='zipcode') Zipcode
                  
