--- a/views/signup.jade
+++ b/views/signup.jade
@@ -105,18 +105,17 @@ html
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   input(type='checkbox', checked='checked')
                   |  Remember me
-		  p
-		   | By creating an account you agree to our
-		   a(href='#') Terms and Privacy
-		   | .
-		 .clearfix
-		   button.cancelbtn(type='button') Cancel
-		   button.signupbtn(type='submit') Sign Up
-		 .text-right
-	          .col-md-16.col-md-offset-4
-		    span.text-right
-		     | Forgot
-		     a(href='#') password?
+                  p
+                   | By creating an account you agree to our
+                   a(href='#') Terms and Privacy
+                  | .
+                 .clearfix
+                   button.cancelbtn(type='button') Cancel
+                   button.signupbtn(type='submit') Sign Up
+                 .text-right
+                 .col-md-16.col-md-offset-4
+                  span.text-right
+                  a(href='#') Forgot password?
     // Footer
     #footer  
 
