--- a/views/search_results.jade
+++ b/views/search_results.jade
@@ -100,6 +100,10 @@ html
       .panel {
       width: 100%
       }
+      .BlankSection {
+      height: 100px;
+      background-color :transparent;
+      }
       #background {
       position: fixed;
       top: 0;
@@ -133,7 +137,7 @@ html
     #background
     // Header
     #header  
-    
+    .container-fluid.BlankSection 
     h4 Search Result...
     // ArrowLine Image
     img#lineimage(src='https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Flowchart_Line.svg/1280px-Flowchart_Line.svg.png')
