--- a/views/signup.jade
+++ b/views/signup.jade
@@ -41,7 +41,6 @@ html
       background-size: cover;
       opacity: 0.2;
       filter:alpha(opacity=40);
-      z-index: -1;
       }
     | &#x9;
     | &#x9;
@@ -57,13 +56,14 @@ html
     #mainform.container
       .row
         .col-md-12
-          #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:150px')
+          #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:200px')
             .panel.panel-info
               .panel-heading
                 .panel-title Sign Up
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                 div(style='float:right; font-size: 85%; position: relative; top:-10px')
                   a#signinlink(href='login') Sign In
+              | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .panel-body
                 form.form-horizontal(role='form', method='post', action='signup', onsubmit='return checkblank(this);')
                   #signupalert.alert.alert-danger(style='display:none')
@@ -75,47 +75,37 @@ html
                     label.col-md-3.control-label(for='first_name') First Name
                     | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                     .col-md-9
-                      input.form-control(type='text', pattern='[A-Za-z]{1,15}', title= 'First name must be a capital letter followed by lowercase letters',  name='first_name', placeholder='Eg. Bob', required)
+                      input.form-control(type='text', name='first_name', placeholder='First Name')
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .form-group
                     label.col-md-3.control-label(for='last_name') Last Name
                     | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                     .col-md-9
-                      input.form-control(type='text', pattern='[A-Za-z]{1,15}', title= 'Last name must be a capital letter followed by lowercase letters',  name='last_name', placeholder='Eg. Smith', required)
+                      input.form-control(type='text', name='last_name', placeholder='Last Name')
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .form-group
                     label.col-md-3.control-label(for='mob_no') Mobile Number
                     | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                     .col-md-9
-                      input.form-control(type='number', name='mob_no', placeholder='Eg: 123-456-7890', required)
+                      input.form-control(type='number', name='mob_no', placeholder='Mobile Number')
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .form-group
                     label.col-md-3.control-label(for='user_name') User Name
                     | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                     .col-md-9
-                      input.form-control(type='text', name='user_name', placeholder='User Name', required)
+                      input.form-control(type='text', name='user_name', placeholder='User Name')
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .form-group
                     label.col-md-3.control-label(for='password') Password
                     | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                     .col-md-9
-                      input.form-control(type='password', name='password', placeholder='Password', required)
+                      input.form-control(type='password', name='password', placeholder='Password')
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .form-group
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
-                  input(type='checkbox', checked='checked')
-                  |  Remember me
-                  p
-                   | By creating an account you agree to our
-                   a(href='#') Terms and Privacy
-                  | .
-                 .clearfix
-                   button.cancelbtn(type='button') Cancel
-                   button.signupbtn(type='submit') Sign Up
-                 .text-right
-                 .col-md-16.col-md-offset-4
-                  span.text-right
-                  a(href='#') Forgot password?
+                  .col-md-offset-3.col-md-9
+                    button#btn-signup.btn.btn-info(type='submit')
+                      amp Sign Up
     // Footer
     #footer  
 
