--- a/MileStone0 Page/views/header1.jade
+++ b/MileStone0 Page/views/header1.jade
@@ -251,7 +251,7 @@ html
                   {
                   tex.setAttribute("placeholder","San Francisco");
                   tex.setAttribute("name","city");
-                  console.log(tex.value);
+                  tex.setAttribute("onkeyup","alltext(tex.value);");
                   
                   }
                   else if (sel.value == 'street')
@@ -275,7 +275,20 @@ html
                        
                      
                       }
-                      } 
+                    }
+
+                    function alltext(inputtxt)
+                    {
+                      var letters = /^[A-Za-z]+$/;
+                      if(!inputtxt.match(letters))
+                     
+                     {
+                       alert('Please input letters only');
+                       
+                     
+                      }
+
+                    } 
       #mySidenav.sidenav
         .container(style='background-color: #2874f0; padding-top: 10px;')
           span.sidenav-heading Home
