--- a/views/header.jade
+++ b/views/header.jade
@@ -193,9 +193,9 @@ html
           .row.row1
             ul.largenav.pull-right
               li.upper-links
-                a.links(href='homepage') Home
+                a.links(href='home') About
               li.upper-links
-                a.links(href='login') Login
+                a.links(href='login') Agent Login
               li.upper-links
                 a.links(href='signup') Sign Up
               li.upper-links
@@ -228,7 +228,7 @@ html
             .col-sm-7.col-md-7
              form.navbar-form(role='form', method='post',action='search_results', onsubmit="return validateForm()")
               select.selectpicker.form-control( name="selectpicker",id ="zip",data-style='btn-danger')
-                  option(value='none') Search by
+                  option(value='none') Search by 
                  
                   option(value='zipcode') Zipcode
                  
@@ -256,12 +256,13 @@ html
                   {
                   tex.setAttribute("placeholder","Eg.94536");
                   tex.setAttribute("name","zipcode");
-                  tex.setAttribute("onkeypress","allnumeric(tex.value)");
+                  tex.setAttribute("onkeyup","allnumeric(tex.value)");
                   }
                   else if(sel.value == 'city')
                   {
                   tex.setAttribute("placeholder","Eg.San Francisco");
                   tex.setAttribute("name","city");
+                  tex.setAttribute("onkeyup","alltext(tex.value);");
                   }
                   else if (sel.value == 'street')
                   {
@@ -275,13 +276,37 @@ html
                   });
                   function allnumeric(inputtxt)
                    {
-                     var numbers = /^[0-9]+$/;
+                     var numbers = /^[0-9]*$/;
+                     if (inputtxt == "")
+                     {
+                       return;
+                     }
                      if(!inputtxt.match(numbers))
                      {
                        alert('Please input numeric characters only');
                        
                       }
-                      } 
+                      if(inputtxt.length > 5)
+                      {
+                      alert('Please input a zipcode of 5 characters');
+                      }
+                      }
+                  function alltext(inputtxt)
+                    {
+                      var letters = /^[A-Za-z]+$/;
+                     if (inputtxt == "")
+                     {
+                       return;
+                     } 
+                     if(!inputtxt.match(letters))
+                     
+                     {
+                       alert('Please input letters only');
+                       
+                     
+                      }
+
+                    }  
       #mySidenav.sidenav
         .container(style='background-color: #2874f0; padding-top: 10px;')
           span.sidenav-heading Home
