Added the No results found functionality

--- a/views/header.jade
+++ b/views/header.jade
@@ -193,7 +193,7 @@ html
           .row.row1
             ul.largenav.pull-right
               li.upper-links
-                a.links(href='home') About
+                a.links(href='home') About us
               li.upper-links
                 a.links(href='login') Agent Login
               li.upper-links
