--- a/views/home_search_results.jade
+++ b/views/home_search_results.jade
@@ -33,7 +33,7 @@ html
       #map {
       height: 500px;
       width: 500px;
-      margin-top: 30%;
+      margin-top: 0%;
       }
       #details{
       float: right;
@@ -55,9 +55,53 @@ html
       filter:alpha(opacity=40);
       z-index: -1;
       }
-    | &#x9;
-    | &#x9;
-    title RECycle
+      #message{
+      position: relative;
+      right: 100px;  
+      top: 150px;
+      float: right;
+      padding-right: 10px;
+      font-family: 'Open Sans Condensed', arial, sans;
+      width: 350px;
+      padding: 30px;
+      background: #FFFFFF;
+      margin: 50px auto;
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+      -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+      -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+      }
+      #message p{
+      background: #4D4D4D;
+      text-transform: uppercase;
+      font-family: 'Open Sans Condensed', sans-serif;
+      color: white;
+      font-size: 18px;
+      font-weight: 100;
+      padding: 20px;
+      margin: -30px -30px 30px -30px;
+      }
+      #message input[type="submit"]{
+      -moz-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      -webkit-box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      box-shadow: inset 0px 1px 0px 0px #45D6D6;
+      background-color: #2CBBBB;
+      border: 1px solid #27A0A0;
+      display: inline-block;
+      cursor: pointer;
+      color: #FFFFFF;
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 14px;
+      padding: 8px 18px;
+      text-decoration: none;
+      text-transform: uppercase;
+      }
+      #message input[type="submit"]:hover {
+      background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+      background-color:#34CACA;
+      }
+      td{padding: 30px;}
+  
+  title RECycle
   | &#x9;
 
 
@@ -73,8 +117,19 @@ html
       
         - each item in rows 
          
-          td(valign="top")
-            #map 
+          tr
+           td
+            #details
+                ul
+                 li
+                   img(src="#{item.image}",style="height:200px;width:400px;margin-top: 5%;")
+                 li Square Feet: #{item.square_size}
+                 li Number of Bedrooms: #{item.number_of_bedrooms}
+                 #address #{item.street},#{item.city},#{item.zipcode}
+             
+              tr
+               td(valign="top")
+                #map 
                     |     
                     script.
                        function initMap() {
@@ -102,47 +157,31 @@ html
                          });
                        }
                     script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDOIMFbTbLtGiTA6u-FPXasu4vmIF-HL2A&callback=initMap')
+ 
+            #message                 
+             form#contact_form(action='message?id=#{item.id}', method='POST')
 
-          td
-            #details
-                ul
-                 li 
-                   img(src="#{item.image}",style="height:500px;width:500px;")
-                 li Square Feet: #{item.square_size}
-                 li Number of Bedrooms: #{item.number_of_bedrooms}
-                 #address #{item.street},#{item.city},#{item.zipcode}
-                 
 
-            
-              form#contact_form(action='message?id=#{item.id}', method='POST')
-                     
-
-                  p Interested in buying this house? 
-                    a(href="#contact") Contact the seller
-                    p#contact
-                    label(for='bname') Your name:
+                  p Interested in buying this house? Fill out the details
+                  label(for='bname') Your name:
                     br
-                    | 
                     input(name='bname', type='text', size='30')
                     br
-                    | 
-                    label(for='bemail') Your email:
+                  label(for='bemail') Your email:
                     br
-                    | 
                     input(name='bemail', type='text', size='30')
                     br
-                    label(for='vphone') Your phone:
+                  label(for='vphone') Your phone:
                     br
-                    | 
                     input(name='vphone', type='text', size='30')
                     br
-                    label(for='messages') Your message:
+                  label(for='messages') Your message:
                     br
-                    | 
-                    textarea(name='messages', rows='7', cols='30')
-                    br
-                    | 
-                    input#submit_button(type='submit')
+                  textarea(name='messages', rows='7', cols='30') 
+                    
+                  input#submit_button(type='submit')                                                        
+   #footer
+            
 
 
               
