--- a/views/login.jade
+++ b/views/login.jade
@@ -78,6 +78,7 @@ html
               button#btn-login.btn.btn-success(type='submit') Login 
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .form-group
+               a(href="#") Forgot Password?
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .col-md-12.control
             | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
