--- a/views/signup.jade
+++ b/views/signup.jade
@@ -42,6 +42,17 @@ html
       opacity: 0.2;
       filter:alpha(opacity=40);
       }
+      .clearfix::after {
+      content: "";
+      clear: both;
+      display: table;
+      }
+      .cancelbtn {
+      padding: 6px 13px;
+      background-color: #f44336;
+      color: white;
+      margin-left: 10px;
+      }
     | &#x9;
     | &#x9;
     title RECycle
@@ -102,10 +113,24 @@ html
                       input.form-control(type='password', name='password', placeholder='Password')
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .form-group
+                    label(for='remember') 
+                     .col-md-9
+                       input.form-control(type="checkbox", text="Remember me")
+                       | Remember me
+                      
+                 
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  p
+                    | By creating an account you agree to our 
+                    a(href='#') Terms & Privacy
+                    | .
+                  .form-group
                   | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
                   .col-md-offset-3.col-md-9
+                   .clearfix
                     button#btn-signup.btn.btn-info(type='submit')
                       amp Sign Up
+                    button.cancelbtn(type="button") Cancel
     // Footer
     #footer  
 
