resolving frontend homepage image issue + uploading m4 doc

--- a/views/home_search_results.jade
+++ b/views/home_search_results.jade
@@ -34,6 +34,7 @@ html
       height: 500px;
       width: 500px;
       margin-top: 0%;
+      margin-left: 10%;
       }
       #details{
       float: right;
