--- a/views/login.jade
+++ b/views/login.jade
@@ -51,7 +51,7 @@ html
     #header  
     | &#x9;&#x9;
     .container
-      #loginbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style='margin-top:150px;')
+      #loginbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style='margin-top:180px;')
         .panel.panel-info
           .panel-heading
             .panel-title Sign In 
@@ -78,7 +78,6 @@ html
               button#btn-login.btn.btn-success(type='submit') Login 
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .form-group
-               a(href="#") Forgot Password?
               | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
               .col-md-12.control
             | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
@@ -86,6 +85,8 @@ html
               | Don&apos;t have an account?
               a(href='signup')
                 | Sign Up Here
+             .text-right
+              a(href="#")  Forgot Password
       | &#x9;&#x9;&#x9;
      
     // Footer
