--- a/views/header.jade
+++ b/views/header.jade
@@ -193,7 +193,10 @@ html
           .row.row1
             ul.largenav.pull-right
               li.upper-links
-                a.links(href='home') About us
+                a.links(href='homepage') 
+                 span.glyphicon.glyphicon-home
+              li.upper-links
+                a.links(href='aboutus') About us
               li.upper-links
                 a.links(href='login') Agent Login
               li.upper-links
@@ -222,11 +225,8 @@ html
             .col-sm-3
               h2(style='margin:0px;')
                 span.smallnav.menu(onclick='openNav()') ☰ RECycle
-              h1(style='margin:0px;')
-                span.largenav
-                 a(href='#')
-                  span.glyphicon.glyphicon-home
-                    RECycle
+              h1(style='margin:0px;') 
+               a(href='homepage') RECycle
               h4  CSC648 Student Project
             .col-sm-7.col-md-7
              form.navbar-form(role='form', method='post',action='search_results', onsubmit="return validateForm()")
